--- a/expert/static/expert/css/style.css
+++ b/expert/static/expert/css/style.css
@@ -818,17 +818,17 @@ input#search_technique + label {
 }
 
 .technique-list, #fancy-tree {
-    margin-top: 56px;
+    margin-top: 15px;
     margin-bottom: 16px;
     border: 1px solid #bdbdbd;
     border-radius: 0.25rem;
     padding-right: 0;
     overflow-y: scroll;
     overflow-x: hidden;
-    height: 400px;
+    height: 250px;
 }
 
-.select-technique #fancy-tree {
+#selectTechniques #fancy-tree {
     margin-top: 0;
     border: none;
 }
