--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -101,6 +101,11 @@
             </div>
         </div>
       </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary save-btn confirm_project" id="accept-project">
+                    تایید و انتخاب تکینک
+            </button>
+        </div>
     </div>
   </div>
 </div>
