--- a/industry/templates/industry/layouts/expertResume.html
+++ b/industry/templates/industry/layouts/expertResume.html
@@ -1,5 +1,194 @@
 {% load static %}
-<div class="fixed-back expert-resume">
+<div class="modal fade" id="expertResume" tabindex="-1" role="dialog" aria-labelledby="expertResumeLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h6 class="modal-title text-right" id="expertResumeLabel"></h6>
+        <button type="button" class="close close__redirect" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="card-side has-image">
+            <div class="user-personal-info">
+                <div class="expert-profile">
+                    <img src="{% static 'industry/img/profile.jpg' %}" alt="profile-img" id="expert_photo">
+                </div>
+                <div class="information">
+                    <h6 id="expert_name"></h6>
+                    <div id="expert_uni"></div>
+                    <div id="expert_field"></div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row mbottom-lg-25" id="whole-education-info">
+                        <div class="col-lg-12 text-right">
+                            <span class="section-title">سوابق علمی</span>
+                            <div class="section no-border">
+                                <div class="education-info-innerDiv">
+                                    <table class='table'>
+                                        <thead>
+                                        <tr>
+                                            <td>مقطع تحصیلی</td>
+                                            <td>رشته تحصیلی</td>
+                                            <td>دانشگاه</td>
+                                            <td>شهر محل تحصیل</td>
+                                            <td>سال اخذ مدرک</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody class="sci_record">
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mbottom-lg-25" id="whole-project-info">
+                        <div class="col-lg-12 text-right">
+                            <span class="section-title">سوابق اجرایی</span>
+                            <div class="section no-border">
+                                <div class="education-info-innerDiv">
+                                    <table class='table'>
+                                        <thead>
+                                        <tr>
+                                            <td>سمت</td>
+                                            <td>از تاریخ</td>
+                                            <td>تا تاریخ</td>
+                                            <td>محل خدمت</td>
+                                            <td>شهر</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody class="executive_record">
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mbottom-lg-25" id="whole-executive-info">
+                        <div class="col-lg-12 text-right">
+                            <span class="section-title">سوابق پژوهشی</span>
+                            <div class="section no-border">
+                                <div class="education-info-innerDiv">
+                                    <table class='table'>
+                                        <thead>
+                                        <tr>
+                                            <td>عنوان طرح پژوهشی</td>
+                                            <td>نام مجری</td>
+                                            <td>مسئول اجرا/همکار</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody class="research_record">
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mbottom-lg-25" id="whole-article-info">
+                        <div class="col-lg-12 text-right">
+                            <span class="section-title">مقالات</span>
+                            <div class="section no-border">
+                                <div class="education-info-innerDiv">
+                                    <table class='table'>
+                                        <thead>
+                                        <tr>
+                                            <td>عنوان مقاله</td>
+                                            <td>تاریخ انتشار</td>
+                                            <td>محل دقیق انتشار</td>
+                                            <td>Impact Factor</td>
+                                            <td>تعداد ارجاع به مقاله شما</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody class="paper_record">
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mbottom-lg-25" id="whole-honors-info">
+                        <div class="col-lg-12 text-right">
+                            <span class="section-title">افتخارات</span>
+                            <div class="section no-border awards">
+                                <ul class="win-ul">
+                                    <li></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 text-right" id="whole-other-info">
+                            <span class="section-title">سایر موارد</span>
+                            <div class="section no-border">
+                                <ul class="tick-ul">
+                                    <li>
+                                        <div class="researcher-num text-right">
+                                            <span dir="ltr">،درحال حاضر</span>
+                                            <span class="researcher_count">10 نفر</span>
+                                            <span> زیر نظر این استاد در حال انجام کار پژوهشی هستند.</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="out-college-research text-right">
+                                            <span>این استاد تجربه کار با شرکت های خارج دانشگاه را</span>
+                                            <span class="has_industrial_research">داشته</span>
+                                            <span> است.</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="foreign-lang">
+                                            <span>زبان های خارجی:</span>
+                                            <div class="row B-g languages">
+                                                <div class="col-6">
+                                                    <i class="r-flag En"></i>
+                                                    <span>انگلیسی</span>
+                                                </div>
+                                                <div class="col-6">
+                                                    <i class="r-flag Ge"></i>
+                                                    <span>آلمانی</span>
+                                                </div>
+                                                <div class="col-6">
+                                                    <i class="r-flag Fr"></i>
+                                                    <span>فرانسوی</span>
+                                                </div>
+                                                <div class="col-6">
+                                                    <i class="r-flag So"></i>
+                                                    <span>کره ای</span>
+                                                </div>
+                                                <div class="col-6">
+                                                    <i class="r-flag Sa"></i>
+                                                    <span>عربی</span>
+                                                </div>
+                                                <div class="col-6">
+                                                    <i class="r-flag It"></i>
+                                                    <span>ایتالیایی</span>
+                                                </div>
+                                                <div class="col-6">
+                                                    <i class="r-flag Po"></i>
+                                                    <span>پرتقالی</span>
+                                                </div>
+                                                <div class="col-6">
+                                                    <i class="r-flag Ru"></i>
+                                                    <span>روسی</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+      <div class="modal-footer"></div>
+    </div>
+  </div>
+</div>
+{% comment %} <div class="fixed-back expert-resume">
     <div class="card p-bottom-0 text-right large side-card">
         <div class="close"></div>
         <div class="card-head"></div>
@@ -180,7 +369,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> {% endcomment %}
 {#<div class="fixed-back expert-resume">#}
 {#    <div class="card text-right">#}
 {#        <div class="close"></div>#}
