--- a/templates/registration/user_pass.html
+++ b/templates/registration/user_pass.html
@@ -21,8 +21,9 @@
         {% csrf_token %}
         <div class="username">
             <label for="username">نام کاربری</label>
-            <input type="text" id="username" name="username" {% if request.user.is_authenticated %}
-                   value="{{ request.user }}" {% else %} value="{{ username }}"{% endif %} readonly>
+            <!-- <input type="text" id="username" name="username" {% if request.user.is_authenticated %}
+                   value="{{ request.user }}" {% else %} value="{{ username }}"{% endif %} readonly> -->
+            <input type="text" id="username" name="username" value="{{ username }}" readonly>
             <i class="fas fa-user-alt fa-lg"></i>
         </div>
         <div class="password">
@@ -44,7 +45,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script>
+{#<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->#}
 <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
 </body>
