add captcha to signup Page

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -76,6 +76,9 @@
                             {{ register_form.email|attr:"id:email"|attr:"class:w-100" }}
                             <i class="fas fa-at fa-lg"></i>
                         </div>
+                        <div class="captcha-test col-md-6">
+                            {{ register_form.captcha | attr:"class:w-100"}}
+                        </div>
                         <button type="submit" name="sign_up" class="Enter-btn">عضویت</button>
                         <hr>
                         <div class="prev-slide">
