--- a/researcher/templates/researcher/layouts/add_new_technique.html
+++ b/researcher/templates/researcher/layouts/add_new_technique.html
@@ -1,6 +1,86 @@
 {% load static %}
 {% load widget_tweaks %}
-<div class="fixed-back add-technique">
+<div class="modal fade" id="addNewTechnique" tabindex="-1" role="dialog" aria-labelledby="addNewTechniqueLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="modal-title text-right" id="addNewTechniqueLabel">ثبت تکنیک جدید</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form method="post" enctype="multipart/form-data" url='{% url "researcher:add_technique" %}'
+                class="ajax-add-technique-form">
+                {% csrf_token %}
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row mbottom-lg-25">
+                            <div class="col-lg-12">
+                                <input type="text" id="technique-name" name="technique" value="" class="w-100" placeholder="برای انتخاب نام تکنیک، روی علامت مثبت کلیک کنید">
+                                <button class="select-technique" type="button">
+                                    <i class="fas fa-plus"></i>
+                                </button>
+                                <div class="all-techniques">
+                                    <div id="fancy-tree"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <span  class="section-title">نحوه ثبت تکنیک</span>
+                                <div class="confirmation section">
+                                    <div class="radio-group row">
+                                        <div class="technique_validation"></div>
+                                        <div class="form-group col-md-4">
+                                            <input class="close-upload" type="radio" name="confirmation_method" id="exam"
+                                                value="exam" hidden>
+                                            <label for="exam">
+                                                <span class="title">درخواست آزمون آنلاین</span>
+                                            </label>
+                                        </div>
+                                        <div class="form-group col-md-4">
+                                            <input class="upload-file" type="radio" name="confirmation_method" id="upload-s"
+                                                value="certificant" hidden>
+                                            <label for="upload-s">
+                                                <span class="title">آپلود گواهی نامه</span>
+                                            </label>
+                                        </div>
+                                        <div class="form-group col-md-4">
+                                            <input class="upload-file" type="radio" name="confirmation_method" id="article"
+                                                value="paper" hidden>
+                                            <label for="article">
+                                                <span class="title">آپلود مقاله</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <input type="file" class="upload-resume" name="resume" id="resume" hidden>
+                                <label for="resume" class="text-center">
+                                    <img src="{% static 'researcher/img/upload.svg' %}" class="upload-img" alt="">
+                                    <img src="{% static 'researcher/img/file.svg' %}" class="file-img" alt="">
+                                    <div class="upload-file-text">
+                                    آپلود فایل
+                                    </div>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn reject-btn" type="reset" data-dismiss="modal">
+                        لغو
+                    </button>
+                    <button type="submit" class="btn btn-primary save-btn confirm_project" id="accept-project">
+                        افزودن
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+{% comment %} <div class="fixed-back add-technique">
     <div class="card text-right medium-card">
         <div class="close"></div>
         <div class="card-head">ثبت تکنیک جدید</div>
@@ -69,4 +149,4 @@
             </form>
         </div>
     </div>
-</div>
+</div> {% endcomment %}
