--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -3,16 +3,17 @@
 {% block title %}تکنیک ها{% endblock %}
 
 {% block dialog %}
-    {% include 'researcher/layouts/add_new_technique.html' %}
     {% include 'researcher/layouts/technique_review_request.html' %}
 {% endblock %}
-
+{% block modals %}
+    {% include 'researcher/layouts/add_new_technique.html' %}
+{% endblock %}
 
 {% block content %}
     <div class="row">
         <div class="col-12 text-right">
             <h3 class="h3 p-top-15 border-bottom">تکنیک ها</h3>
-            <button class="add-new-technique top-page-button border-button">
+            <button class="add-new-technique top-page-button border-button" data-toggle="modal" data-target="#addNewTechnique">
                 <i class="fas fa-plus"></i>
                 <span>افزودن تکنیک جدید</span>
             </button>
@@ -70,7 +71,7 @@
                                 </div>
                                 {% if tech.level %}
                                     <div class="col-md-2 col-2">
-                                        <button id={{ tech.id }} class="default-btn show-btn new-review-request">
+                                        <button id={{ tech.id }} class="default-btn show-btn new-review-request" data-toggle="modal" data-target="#">
                                             ارتقا نمره
                                         </button>
                                     </div>
@@ -108,7 +109,7 @@
                                 <img src="{% static 'img/empty_technique.svg' %}" alt="">
                                 <h5>اولین تکنیک خود را ثبت کنید!</h5>
                                 <pre>تکنیک‌ها به معنای مهارت‌های آزمایشگاهی‌ای هستند که شما قرار است در پروژه‌ها مورد استفاده قرار بگیرند؛ به عنوان مثال، RT-PCR و یا H&E Staining هر کدام نمونه‌هایی از یک تکنیک هستند. تکنیک‌ها رکن اصلی فعالیت شما در چمران تیم هستند؛ چرا که تنها پروژه‌هایی به شما پیشنهاد می‌شود که شما تکنیک‌های مورد نیاز آن را در حساب کاربری‌تان ثبت کرده باشید. برای افزودن یک تکنیک به حساب کاربری خود، بر روی دکمه زیر کلیک کنید.</pre>
-                                <button class="add-new-technique border-button">
+                                <button class="add-new-technique border-button" data-toggle="modal" data-target="#addNewTechnique">
                                     <i class="fas fa-plus"></i>
                                     <span>افزودن تکنیک جدید</span>
                                 </button>
