--- a/templates/chamran_admin/news_list.html
+++ b/templates/chamran_admin/news_list.html
@@ -2,6 +2,10 @@
 
 {% block content %}
     {% for news in object_list %}
+    <h5>----------</h5>
+        {{news.media}}
         {{news.title}}
+        {{news.text | safe}}<br>
+        {{news.writer}}
     {% endfor %}
 {% endblock content %}
