--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -71,7 +71,7 @@
                                 </div>
                                 {% if tech.level %}
                                     <div class="col-md-2 col-2">
-                                        <button id={{ tech.id }} class="default-btn show-btn new-review-request" data-toggle="modal" data-target="#">
+                                        <button id="{{ tech.id }}" class="default-btn show-btn new-review-request" data-toggle="modal" data-target="#reviewRequest">
                                             ارتقا نمره
                                         </button>
                                     </div>
