--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -72,17 +72,17 @@
                                     {% render_field form.industry_type.errors %}
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label for="id_industry_address">نشانی</label>
-                                {% if form.industry_address.errors %}
-                                    {% render_field form.industry_address class+="w-100 error" rows="3" dir="rtl" %}
-                                {% else %}
-                                    {% render_field form.industry_address class+="w-100" rows="3" dir="rtl" %}
-                                {% endif %}
-                                <div class="error">
-                                    {% render_field form.industry_address.errors %}
-                                </div>
-                            </div>
+{#                            <div class="form-group">#}
+{#                                <label for="id_industry_address">نشانی</label>#}
+{#                                {% if form.industry_address.errors %}#}
+{#                                    {% render_field form.industry_address class+="w-100 error" rows="3" dir="rtl" %}#}
+{#                                {% else %}#}
+{#                                    {% render_field form.industry_address class+="w-100" rows="3" dir="rtl" %}#}
+{#                                {% endif %}#}
+{#                                <div class="error">#}
+{#                                    {% render_field form.industry_address.errors %}#}
+{#                                </div>#}
+{#                            </div>#}
                         </div>
                         <div class="col-md-4">
                             <div class="form-group text-center">
