--- a/researcher/templates/researcher/layouts/add_new_technique.html
+++ b/researcher/templates/researcher/layouts/add_new_technique.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% load widget_tweaks %}
-<div class="modal fade" id="addNewTechnique" tabindex="-1" role="dialog" aria-labelledby="addNewTechniqueLabel" aria-hidden="true">
+<div class="modal fade" id="addNewTechnique" tabindex="-1" role="dialog" aria-labelledby="addNewTechniqueLabel"
+     aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -8,44 +9,51 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
             </div>
             <form method="post" enctype="multipart/form-data" url='{% url "researcher:add_technique" %}'
-                class="ajax-add-technique-form">
+                  class="ajax-add-technique-form">
                 {% csrf_token %}
                 <div class="modal-body">
                     <div class="container">
                         <div class="row mbottom-lg-25">
                             <div class="col-lg-12">
-                                <input type="text" id="technique-name" name="technique" value="" class="w-100" placeholder="برای انتخاب نام تکنیک، روی علامت مثبت کلیک کنید">
-                                <button class="select-technique" type="button">
-                                    <i class="fas fa-plus"></i>
-                                </button>
-                                <div class="all-techniques">
-                                    <div id="fancy-tree"></div>
+                                <div class="form-group">
+                                    <label for="technique-name">نام تکنیک</label>
+                                    <input type="text" id="technique-name" name="technique" value="" class="w-100"
+                                           placeholder="برای انتخاب نام تکنیک، روی علامت مثبت کلیک کنید">
+                                    <button class="select-technique" type="button">
+                                        <i class="fas fa-plus"></i>
+                                    </button>
+                                    <div class="all-techniques">
+                                        <div id="fancy-tree"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span  class="section-title">نحوه ثبت تکنیک</span>
+                                <span class="section-title">نحوه ثبت تکنیک</span>
                                 <div class="confirmation section">
                                     <div class="radio-group row">
                                         <div class="technique_validation"></div>
                                         <div class="form-group col-md-4">
-                                            <input class="close-upload" type="radio" name="confirmation_method" id="exam"
-                                                value="exam" hidden>
+                                            <input class="close-upload" type="radio" name="confirmation_method"
+                                                   id="exam"
+                                                   value="exam" hidden>
                                             <label for="exam">
                                                 <span class="title">درخواست آزمون آنلاین</span>
                                             </label>
                                         </div>
                                         <div class="form-group col-md-4">
-                                            <input class="upload-file" type="radio" name="confirmation_method" id="upload-s"
-                                                value="certificant" hidden>
+                                            <input class="upload-file" type="radio" name="confirmation_method"
+                                                   id="upload-s"
+                                                   value="certificant" hidden>
                                             <label for="upload-s">
                                                 <span class="title">آپلود گواهی نامه</span>
                                             </label>
                                         </div>
                                         <div class="form-group col-md-4">
-                                            <input class="upload-file" type="radio" name="confirmation_method" id="article"
-                                                value="paper" hidden>
+                                            <input class="upload-file" type="radio" name="confirmation_method"
+                                                   id="article"
+                                                   value="paper" hidden>
                                             <label for="article">
                                                 <span class="title">آپلود مقاله</span>
                                             </label>
@@ -61,7 +69,7 @@
                                     <img src="{% static 'researcher/img/upload.svg' %}" class="upload-img" alt="">
                                     <img src="{% static 'researcher/img/file.svg' %}" class="file-img" alt="">
                                     <div class="upload-file-text">
-                                    آپلود فایل
+                                        آپلود فایل
                                     </div>
                                 </label>
                             </div>
