--- a/templates/registration/user_pass.html
+++ b/templates/registration/user_pass.html
@@ -1,52 +1,60 @@
-{% load widget_tweaks %}
+	{% load widget_tweaks %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <title>ورود</title>
-    {% load static %}
+    <link rel="icon" sizes="16*16" href="{% static 'img/circle_logo.png' %}">
+    <title>انتخاب رمز عبور</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.css">
-    <link rel="stylesheet" href="{% static 'css/style1.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-{% include 'registration/loading.html' %}
-<div class="card registration">
-    <img class="registration-card-icon" src="{% static 'img/logo.png' %}" alt="ChamranLogo">
-    <p class="ChamranTeam">ثبت نام کاربری و رمز عبور</p>
-    <form method="post" id="user-pass-form">
-        {% csrf_token %}
-        <div class="username">
-            <label for="username">نام کاربری</label>
-            <!-- <input type="text" id="username" name="username" {% if request.user.is_authenticated %}
-                   value="{{ request.user }}" {% else %} value="{{ username }}"{% endif %} readonly> -->
-            <input type="text" id="username" name="username" value="{{ username }}" readonly>
-            <i class="fas fa-user-alt fa-lg"></i>
+<div class="card registration single-column-card text-center">
+    <div class="col-12 loading">
+        <div class="circle-loader">
+            <div class="checkmark draw"></div>
         </div>
-        <div class="password">
-            <label for="id_password">رمز عبور</label>
-            {{ form.password }}
-            <div class="error">
-                {{ form.non_field_errors }}
+        <h6>لطفا صبر کنید ...</h6>
+    </div>
+    <div class="recover-pass-container">
+        <div class="card-center-image">
+            <img src="{% static 'img/key.svg' %}" alt="">
+        </div>
+        <h6>ثبت نام کاربری و رمز عبور</h6>
+        <hr>
+        <form method="post" id="user-pass-form">
+            {% csrf_token %}
+            <div class="username input-compact">
+                <label for="username">نام کاربری</label>
+                <input type="text" id="username" name="username" {% if request.user.is_authenticated %}
+                       value="{{ request.user }}" {% else %} value="{{ username }}"{% endif %} class="w-100" readonly>
+                <i class="fas fa-user-alt fa-lg"></i>
             </div>
-            <i class="fas fa-lock fa-lg"></i>
-        </div>
-        <div class="confirm_password">
-            <label for="confirm_password">تایید رمز عبور</label>
-            {{ form.confirm_password|attr:"id:confirm_password" }}
-            <i class="fas fa-check fa-lg"></i>
-        </div>
-        <button type="submit" name="enter" class="Enter-btn">ثبت اطلاعات</button>
-    </form>
+            <div class="password input-compact">
+                <label for="id_password">رمز عبور</label>
+                {{ form.password|attr:'class:w-100' }}
+                <div class="error">
+                    {{ form.non_field_errors }}
+                </div>
+                <i class="fas fa-lock fa-lg"></i>
+            </div>
+            <div class="confirm_password input-compact">
+                <label for="confirm_password">تایید رمز عبور</label>
+                {{ form.confirm_password|attr:"id:confirm_password"|attr:'class:w-100' }}
+                <i class="fas fa-check fa-lg"></i>
+            </div>
+            <button type="submit" name="enter" class="Enter-btn">ثبت اطلاعات</button>
+        </form>
+    </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-{#<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->#}
-<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
